--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Dependency directory
-node_modules
+node_modules/
 
 # Rest pulled from https://github.com/github/gitignore/blob/master/Node.gitignore
 # Logs
@@ -100,3 +100,14 @@ __tests__/runner/*
 # IDE files
 .idea
 *.code-workspace
+
+# Ignore environment files
+.env
+.env.local
+
+# Ignore build artifacts
+dist/
+coverage/
+
+# Include the Gmail service account key file
+!gmail-summarize-443223-38915cb8f27c.json
